...
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/news_image"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textHeading"
            android:textColor="@color/darkBackground"
            android:layout_marginStart="@dimen/item_margin_xxl"
            android:layout_marginEnd="@dimen/item_margin_xl"
...
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_news_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_margin_xxl"
            android:layout_marginEnd="@dimen/item_margin_xl"
            android:layout_marginTop="@dimen/item_margin_xs"
            android:ellipsize="end"
...
